k8s/aiimmigrants-com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiimmigrants-com
  namespace: aiimmigrants-com
spec:
  selector:
    app: aiimmigrants-com
  ports:
    - port: 80
      targetPort: 8080
