k8s/aiimmigrants-com/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aiimmigrants-com
  namespace: aiimmigrants-com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`aiimmigrants.com`) || Host(`www.aiimmigrants.com`)
      kind: Rule
      services:
        - name: aiimmigrants-com
          port: 80
  tls: {}
